# llm-gateway

./: .dockerignore  .gitignore  ARCHITECTURE.md  CAPACITY.md  CONFIG.md  DECISIONS.md  DEMO.md  DEPLOY.md  Dockerfile  FAILURE_MODES.md  INCIDENT_EXAMPLE.md  INCIDENT_RESPONSE_QUEST.md  PHASE0.md  PHASE2.md  PHASES.md  Production Engineering_ Quest Log.md  QUEST_EVIDENCE.md  QUEST_STATUS.md  README.md  RELIABILITY.md  RELIABILITY_QUEST.md  RUNBOOK.md  SCALABILITY.md  SCALABILITY_QUEST.md  TROUBLESHOOTING.md  docker-compose.yml  mission.md  pyproject.toml
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  errors.py  logging.py  metrics.py
app/schemas/: generate.py
app/services/: cache.py  inference.py
grafana/provisioning/dashboards/: llm-gateway.json
llm_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
load-tests/: baseline.js  cache.js  scale.js  tsunami.js
nginx/: nginx.conf
prometheus/: alerts.yml  prometheus.yml
relay/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_errors.py  test_generate.py  test_health.py  test_scaling_headers.py
tests/unit/: __init__.py  test_errors.py  test_generate_schema.py  test_inference.py
